--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,13 +6,15 @@
     "skipLibCheck": true,
     "esModuleInterop": true,
     "noImplicitAny": true,
-    "sourceMap": true,
+    "inlineSourceMap": true,
+    "inlineSources": true,
     "baseUrl": ".",
     "outDir": "dist",
     "moduleResolution": "node",
     "resolveJsonModule": true,
-    "jsx": "react-jsx",
+    "jsx": "react",
     "paths": {
+      "src/*": ["src/*"],
       "*": ["node_modules/*"]
     }
   },
