--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@electron-forge/maker-squirrel": "^6.1.1",
     "@electron-forge/maker-zip": "^6.1.1",
     "@electron-forge/plugin-webpack": "^6.1.1",
+    "@types/chroma-js": "^2.4.0",
     "@types/react": "^18.2.6",
     "@types/react-dom": "^18.2.4",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
@@ -38,17 +39,20 @@
     "style-loader": "^3.0.0",
     "ts-loader": "^9.2.2",
     "ts-node": "^10.0.0",
+    "tsconfig-paths-webpack-plugin": "^4.0.1",
     "typescript": "~4.5.4"
   },
   "dependencies": {
     "@chakra-ui/react": "^2.6.1",
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
+    "chroma-js": "^2.4.2",
     "electron-squirrel-startup": "^1.0.0",
     "framer-motion": "^10.12.12",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
+    "simplex-noise": "^4.0.1",
     "usehooks-ts": "^2.9.1"
   }
 }
