--- a/package.json
+++ b/package.json
@@ -25,8 +25,11 @@
     "@electron-forge/maker-zip": "^6.1.1",
     "@electron-forge/plugin-webpack": "^6.1.1",
     "@types/chroma-js": "^2.4.0",
+    "@types/luxon": "^3.3.0",
     "@types/react": "^18.2.6",
     "@types/react-dom": "^18.2.4",
+    "@types/react-router-dom": "5.3.0",
+    "@types/react-transition-group": "^4.4.6",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
     "@vercel/webpack-asset-relocator-loader": "1.7.3",
@@ -40,18 +43,24 @@
     "ts-loader": "^9.2.2",
     "ts-node": "^10.0.0",
     "tsconfig-paths-webpack-plugin": "^4.0.1",
-    "typescript": "~4.5.4"
+    "typescript": "~4.5.4",
+    "url-loader": "^4.1.1"
   },
   "dependencies": {
     "@chakra-ui/react": "^2.6.1",
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
     "chroma-js": "^2.4.2",
+    "electron-log": "4.4.6",
     "electron-squirrel-startup": "^1.0.0",
+    "electron-store": "^8.1.0",
     "framer-motion": "^10.12.12",
+    "luxon": "^3.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
+    "react-router-dom": "5.3.0",
+    "react-transition-group": "^4.4.5",
     "simplex-noise": "^4.0.1",
     "usehooks-ts": "^2.9.1"
   }
