working on spotify thingyx

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,7 @@
     "inlineSourceMap": true,
     "inlineSources": true,
     "baseUrl": ".",
+    "allowSyntheticDefaultImports": true,
     "outDir": "dist",
     "moduleResolution": "node",
     "resolveJsonModule": true,
