--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@electron-forge/maker-zip": "^6.1.1",
     "@electron-forge/plugin-webpack": "^6.1.1",
     "@types/chroma-js": "^2.4.0",
+    "@types/get-pixels": "^3.3.2",
     "@types/luxon": "^3.3.0",
     "@types/react": "^18.2.6",
     "@types/react-dom": "^18.2.4",
@@ -39,6 +40,7 @@
     "eslint-plugin-import": "^2.25.0",
     "fork-ts-checker-webpack-plugin": "^7.2.13",
     "node-loader": "^2.0.0",
+    "source-map-support": "^0.5.21",
     "style-loader": "^3.0.0",
     "ts-loader": "^9.2.2",
     "ts-node": "^10.0.0",
@@ -54,7 +56,9 @@
     "electron-log": "4.4.6",
     "electron-squirrel-startup": "^1.0.0",
     "electron-store": "^8.1.0",
+    "extract-colors": "^3.0.0",
     "framer-motion": "^10.12.12",
+    "get-pixels": "^3.3.3",
     "luxon": "^3.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
