added auth flow

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "package": "electron-forge package",
     "make": "electron-forge make",
     "publish": "electron-forge publish",
+    "auth": "cd auth && ts-node .",
     "lint": "eslint --ext .ts,.tsx ."
   },
   "keywords": [],
@@ -40,10 +41,11 @@
     "eslint-plugin-import": "^2.25.0",
     "fork-ts-checker-webpack-plugin": "^7.2.13",
     "node-loader": "^2.0.0",
+    "querystring": "^0.2.1",
     "source-map-support": "^0.5.21",
     "style-loader": "^3.0.0",
     "ts-loader": "^9.2.2",
-    "ts-node": "^10.0.0",
+    "ts-node": "^10.9.1",
     "tsconfig-paths-webpack-plugin": "^4.0.1",
     "typescript": "~4.5.4",
     "url-loader": "^4.1.1"
@@ -52,10 +54,13 @@
     "@chakra-ui/react": "^2.6.1",
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
+    "chalk": "^5.2.0",
+    "chalk-template": "^1.1.0",
     "chroma-js": "^2.4.2",
     "electron-log": "4.4.6",
     "electron-squirrel-startup": "^1.0.0",
     "electron-store": "^8.1.0",
+    "express": "^4.18.2",
     "extract-colors": "^3.0.0",
     "framer-motion": "^10.12.12",
     "get-pixels": "^3.3.3",
