--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@types/react-dom": "^18.2.4",
     "@types/react-router-dom": "5.3.0",
     "@types/react-transition-group": "^4.4.6",
+    "@types/spotify-web-api-node": "^5.0.7",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
     "@vercel/webpack-asset-relocator-loader": "1.7.3",
@@ -71,6 +72,7 @@
     "react-router-dom": "5.3.0",
     "react-transition-group": "^4.4.5",
     "simplex-noise": "^4.0.1",
+    "spotify-web-api-node": "^5.0.2",
     "usehooks-ts": "^2.9.1"
   }
 }
